--- a/learning_journal/learning_journal/templates/login.jinja2
+++ b/learning_journal/learning_journal/templates/login.jinja2
@@ -12,7 +12,8 @@
         <input type="password" name="password" pattern="[\w]+" required />
     </div>
     <div class="control_row">
-        <input type="submit" name="Login" value="Login"/>
+        <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}" />
+        <input type="submit" name="Login" value="Login" />
     </div>
 </form>
 {% endblock %}
