--- a/learning_journal/learning_journal/templates/new_entry.jinja2
+++ b/learning_journal/learning_journal/templates/new_entry.jinja2
@@ -14,6 +14,7 @@
             </textarea>
         </li>
         <li>
+            <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}" />
             <input type="submit" value="Submit New Entry" />
         </li>
     </ul>
